splitting tkm events